[project]
name = "algorand-python"
# This version represents the version of the stub API's and should follow semver semantics.
# When updating this value, if it is a major/minor change, make sure to update:
#   src/puyapy/parse.py:MAX_SUPPORTED_ALGOPY_VERSION_EX
# For more info see stubs/README.md#versioning
version = "3.0.0"
description = "API for writing Algorand Python Smart contracts"
authors = [{ name = "Algorand Foundation", email = "contact@algorand.foundation" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.12.0,<4"

[tool.hatch.build.targets.sdist]
include = [
    "algopy.py",
    "algopy-stubs",
]

[tool.hatch.build.targets.wheel]
include = [
    "algopy.py",
    "algopy-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
