[project]
name = "puya-examples"
version = "0.1.0"
description = "Numbered examples for Puya (Algorand Python compiler)"
requires-python = ">=3.12"
dependencies = [
    "algokit-utils>=5.0.0a17,<6",
    "pytest",
    "algorand-python-testing==1.1.0",
    "py-algorand-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
